--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
   },
   "dependencies": {
     "bootstrap": "^4.4.1",
-    "gatsby": "^2.19.7",
+    "gatsby": "^2.24.1",
     "gatsby-plugin-manifest": "^2.2.42",
     "gatsby-plugin-offline": "^3.0.35",
     "gatsby-plugin-prefetch-google-fonts": "^1.4.3",
@@ -28,7 +28,9 @@
     "react-icons": "^3.9.0"
   },
   "devDependencies": {
-    "prettier": "^1.19.1"
+    "prettier": "^1.19.1",
+    "webpack": "^4.43.0",
+    "webpack-cli": "^3.3.12"
   },
   "repository": {
     "type": "git",
